Adding a bunch of validation code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
-cmake_minimum_required(VERSION 3.5)
+# Set some flags
+cmake_minimum_required(VERSION 2.8.11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_BUILD_TYPE Debug)
+
+# Create our project for further reference
 project(vulkan_play)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(VK_SOURCE main.cpp vk_deleter.h)
+add_executable(vkplay ${VK_SOURCE})
 
-set(SOURCE_FILES main.cpp VDeleter.cpp VDeleter.h)
-add_executable(vulkan_play ${SOURCE_FILES})
-target_link_libraries(vulkan_play vulkan glfw)
+# Library dependencies for the http extention
+target_link_libraries(vkplay vulkan glfw)
